src/test/data/psi_tree/syntax_errors/pinned_instruction_block.tz
parameter string;
return string;
storage unit;
code {
    # blocks must be parsed, even when instructions in them contain syntax errors
    IF { DROP DRIP } { DROP_DROP DRIP_DRIP };
    IF { DROP2 DRIP2 } { DROP_DROP2 DRIP_DRIP2 };
};
